--- a/ApeEntertainment/ApeEntertainment.html
+++ b/ApeEntertainment/ApeEntertainment.html
@@ -72,6 +72,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ApeComics52.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ApeComics53.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ApeComics54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ApeComics55.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -135,6 +136,7 @@ Titles
 <li><a href="ApeComics52.jpg">Super Human Resources     </a> (2009)
 <li><a href="ApeComics53.jpg">Teddy Scares  </a> (2007)
 <li><a href="ApeComics54.jpg">White Picket Fences   </a> (2008)
+<li><a href="ApeComics55.jpg">Wind Raider</a> (2009)
 
 </p>
 
