--- a/Archie/Archie.html
+++ b/Archie/Archie.html
@@ -33,9 +33,45 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Archie is an ongoing comic book series featuring the <a href="../ArchieComics/ArchieComics.html">Archie Comics</a> character Archie Andrews. The character first drawn in <a href="../Pep/Pep.html">Pep Comics</a> #22 (1941) by Bob Montana. Archie proved to be popular enough to warrant his own self-titled ongoing comic book series which began publication in the winter of 1942 and ran until June 2015. 
+Archie is an ongoing comic book series featuring the <a href="../ArchieComics/ArchieComics.html">Archie Comics</a> character Archie Andrews. The character first drawn in <a href="../Pep/Pep.html">Pep Comics</a> #22 (1941) by Bob Montana. Archie proved to be popular enough to warrant his own self-titled ongoing comic book series which began publication in the winter of 1942 and continues to run today. 
 </p><p>
 A second series began publication in July 2015, featuring a reboot of the Archie universe with a new character design aesthetic and a more mature story format and scripting, aimed for older, contemporary teenage and young adult readers. The printed comic book format is different from the previous publications.
+</p><p>
+With over 80 years in publication, archie has been produced by many artists. I have discovered these 32 so far, but there are probably more:
+<li>Bob Montana
+<li>Al Fagaly
+<li>Harry Lucey
+<li>Dan DeCarlo
+<li>George Frese
+<li>Bob Bolling
+<li>Samm Schwartz
+<li>Stan Goldberg
+<li>Rex Lindsey
+<li>Dan DeCarlo Jr.
+<li>Fernando Ruizz
+<li>Mike Esposito
+<li>Dave Manak
+<li>Jeff Shultz
+<li>Rick Burchett
+<li>Joe Edwards
+<li>Bill Woggon
+<li>Norm Breyfogle
+<li>Rudy Lapick
+<li>Terry Austin
+<li>Rod Ollerenshaw
+<li>Bob Smith
+<li>Jon D'Agostino
+<li>Rich Koslowski
+<li>Joe Rubinstein
+<li>Bill Yoshida
+<li>Jack Morelli
+<li>John Workman
+<li>Barry Grossman
+<li>Glenn Whitmore
+<li>Joe Morciglio
+<li>Jason Jensen
+
+
 </p>
 
 </body>
