--- a/Defiant/Defiant.html
+++ b/Defiant/Defiant.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Defiant</title>
+<title>Defiant Comics</title>
 </head>
 
 <body>
@@ -36,7 +36,9 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Defiant Comics was a comic book publishing imprint of Enlightened Entertainment Partners, LP. Defiant was established in 1993 by former Marvel Comics and Valiant Comics editor-in-chief Jim Shooter. Defiant was founded in the wake of Jim Shooter's departure from Valiant. After attempting, unsuccessfully, to retain his partial ownership of Voyager Communications (Valiant's parent company) Shooter founded a new company that included some Valiant artists and writers on its staff. He formed a business venture with The River Group to help finance Defiant.
+</p><p>
+In early 1993, Defiant announced that its first title, Plasm, would be released as a series of trading cards that could be put together in an album to form "issue #0". Upon hearing the news, Marvel Comics threatened a lawsuit against Defiant, claiming the new title violated a Marvel UK trademark for their book/character Plasmer. Though Defiant changed the title to Warriors of Plasm, Marvel continued its lawsuit. While the court eventually ruled in favor of Defiant, the legal process depleted the company's capital, having cost over $300,000 in legal fees.[4] Defiant ceased publication in Summer 1995.
 </p><p>
 Titles
 </p><p>
