--- a/index.html
+++ b/index.html
@@ -7126,7 +7126,7 @@
 </tr>
 
 <tr>
-<td>Ape Comics</td>
+<td>Ape Entertainment</td>
 <td>2003</td>
 <td>Publisher</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
@@ -26776,7 +26776,7 @@
 </tr>
 
 <tr>
-<td>Defiant</td>
+<td>Defiant Comics</td>
 <td>1993</td>
 <td>Publisher</td>
 <td><a href="Defiant/Defiant.html">Details</a></td>
@@ -89945,6 +89945,13 @@
 <td>2009</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wind Raider</td>
+<td>2009</td>
+<td>Ape</td>
+<td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
