--- a/index.html
+++ b/index.html
@@ -2153,6 +2153,13 @@
 </tr>
 
 <tr>
+<td>Ace Reid</td>
+<td>1925</td>
+<td>Creator</td>
+<td><a href="AceReid/AceReid.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aces</td>
 <td>1988</td>
 <td>Eclipse</td>
@@ -24943,6 +24950,13 @@
 </tr>
 
 <tr>
+<td>Dargaud International</td>
+<td>1982</td>
+<td>Publisher</td>
+<td><a href="Dargaud/Dargaud.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Darick Robertson</td>
 <td>1968</td>
 <td>Creator</td>
@@ -46237,6 +46251,13 @@
 </tr>
 
 <tr>
+<td>J.R. Williams</td>
+<td>1888</td>
+<td>Creator</td>
+<td><a href="PremierPress/PremierPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>J.R. Williams' Fun House</td>
 <td>1993</td>
 <td>Starhead</td>
@@ -50622,6 +50643,13 @@
 <td>1975</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Korgoth of Barbaria</td>
+<td>2006</td>
+<td>Cartoon Network</td>
+<td><a href="Korgoth/Korgoth.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64114,6 +64142,13 @@
 <td>2015</td>
 <td>Jessica Abel</td>
 <td><a href="JessicaAbel/JessicaAbel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Out Our Way</td>
+<td>1927</td>
+<td>Premier Press</td>
+<td><a href="PremierPress/PremierPress.html">Details</a></td>
 </tr>
 
 <tr>
