--- a/FarSide/FarSide.html
+++ b/FarSide/FarSide.html
@@ -83,6 +83,7 @@
 <div class="mySlides" style="text-align: center;"><img src="FarSide64.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FarSide65.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FarSide66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FarSide67.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
