--- a/Aircel/Aircel.html
+++ b/Aircel/Aircel.html
@@ -106,7 +106,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Aircel Comics (Aircel Publishing) was a Canadian comic book publisher founded by Barry Blair, based in Ottawa and active from 1985 until 1994. In 1988, it merged with American publisher Eternity Comics, itself an imprint of Malibu Comics, and in the late 1980s was taken over by Malibu before ceasing publication. It was the original publisher of The Men in Black, the 1990 comic book on which the Men In Black film series was based.
+Aircel Comics (Aircel Publishing) was a Canadian comic book publisher founded by Barry Blair, based in Ottawa and active from 1985 until 1994. In 1988, it merged with American publisher Eternity Comics, itself an imprint of Malibu Comics, and in the late 1980s was taken over by Malibu before ceasing publication. It was the original publisher of The Men in Black, the 1990 comic book on which the Men In Black film series was based as well as the Walking Dead, long before the hit TV series.
 </p><p>
 Aircel blended historical and futuristic fantasy from different cultures as the underlying theme for each comic series. It featured high-quality colour covers with black-and white interiors. Canadian artists such as Dave Cooper, Denis Beauvais, and Dale Keown got their start at Aircel. Charles de Lint also scripted several comic books for Aircel in the mid-1980s.
 </p><p>
