--- a/Archie/Archie.html
+++ b/Archie/Archie.html
@@ -38,39 +38,40 @@ Archie is an ongoing comic book series featuring the <a href="../ArchieComics/Ar
 A second series began publication in July 2015, featuring a reboot of the Archie universe with a new character design aesthetic and a more mature story format and scripting, aimed for older, contemporary teenage and young adult readers. The printed comic book format is different from the previous publications.
 </p><p>
 With over 80 years in publication, archie has been produced by many artists. I have discovered these 32 so far, but there are probably more:
-<li>Bob Montana
+
 <li>Al Fagaly
-<li>Harry Lucey
-<li>Dan DeCarlo
-<li>George Frese
+<li>Al Hartley
+<li>Barry Grossman
+<li>Bill Woggon
+<li>Bill Yoshida
 <li>Bob Bolling
+<li>Bob Montana
+<li>Bob Smith
+<li>Dan DeCarlo
+<li>Dan DeCarlo Jr.
+<li>Dave Manak
+<li>Fernando Ruizz
+<li>George Frese
+<li>Glenn Whitmore
+<li>Harry Lucey
+<li>Jack Morelli
+<li>Jason Jensen
+<li>Jeff Shultz
+<li>Joe Edwards
+<li>Joe Morciglio
+<li>Joe Rubinstein
+<li>John Workman
+<li>Jon D'Agostino
+<li>Mike Esposito
+<li>Norm Breyfogle
+<li>Rex Lindsey
+<li>Rich Koslowski
+<li>Rick Burchett
+<li>Rod Ollerenshaw
+<li>Rudy Lapick
 <li>Samm Schwartz
 <li>Stan Goldberg
-<li>Rex Lindsey
-<li>Dan DeCarlo Jr.
-<li>Fernando Ruizz
-<li>Mike Esposito
-<li>Dave Manak
-<li>Jeff Shultz
-<li>Rick Burchett
-<li>Joe Edwards
-<li>Bill Woggon
-<li>Norm Breyfogle
-<li>Rudy Lapick
 <li>Terry Austin
-<li>Rod Ollerenshaw
-<li>Bob Smith
-<li>Jon D'Agostino
-<li>Rich Koslowski
-<li>Joe Rubinstein
-<li>Bill Yoshida
-<li>Jack Morelli
-<li>John Workman
-<li>Barry Grossman
-<li>Glenn Whitmore
-<li>Joe Morciglio
-<li>Jason Jensen
-
 
 </p>
 
