--- a/Maelstrom/Maelstrom.html
+++ b/Maelstrom/Maelstrom.html
@@ -28,6 +28,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Maelstrom8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Maelstrom9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Maelstrom10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Maelstrom11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
