--- a/index.html
+++ b/index.html
@@ -10890,7 +10890,7 @@
 <tr>
 <td>Bathing Machine</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -24511,7 +24511,7 @@
 <tr>
 <td>Czar Chasm</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -27925,7 +27925,7 @@
 <tr>
 <td>Diggers</td>
 <td>1988</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -35006,7 +35006,7 @@
 <tr>
 <td>Final Man</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -43859,7 +43859,7 @@
 <tr>
 <td>Honko The Clown</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -50501,7 +50501,7 @@
 <tr>
 <td>Kiwanni: Daughter Of The Dawn</td>
 <td>1988</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -52230,7 +52230,7 @@
 <tr>
 <td>Legions Of Ludicrous Hero</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -58472,7 +58472,7 @@
 <tr>
 <td>Mightyguy</td>
 <td>1987</td>
-<td>CAndT Graphics</td>
+<td>C And T Graphics</td>
 <td><a href="CTGraphics/CTGraphics.html">Details</a></td>
 </tr>
 
@@ -85535,6 +85535,13 @@
 <td>2008</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Udon Comics</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
