--- a/index.html
+++ b/index.html
@@ -2852,6 +2852,13 @@
 <td><a href="AdventuresOfHomerGhost/AdventuresHomerGhost.html">Details</a></td>
 
 <tr>
+<td>Adventures Of Huckleberry Finn</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Jodelle</td>
 <td>2013</td>
 <td>Fantagraphics</td>
@@ -18768,6 +18775,13 @@
 </tr>
 
 <tr>
+<td>Casa Nostra</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Casanova</td>
 <td>1991</td>
 <td>Aircel</td>
@@ -24649,6 +24663,13 @@
 </tr>
 
 <tr>
+<td>Daigo The Beast: Umehara Fighting Gamers!</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daily Bugle</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -25590,6 +25611,20 @@
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkstalkers: Rise Of The Night Warriors</td>
+<td>2020</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkstalkers: The Night Warriors</td>
+<td>2010</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29442,6 +29477,13 @@
 </tr>
 
 <tr>
+<td>Dorothy Of Oz</td>
+<td>2007</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dot Dotland</td>
 <td>1974</td>
 <td>Harvey</td>
@@ -29901,6 +29943,13 @@
 <td>1988</td>
 <td>Marvel</td>
 <td><a href="DragonsClaws/DragonsClaws.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dragon's Crown</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45768,6 +45817,13 @@
 </tr>
 
 <tr>
+<td>Infini-T Force</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Infinite Dark</td>
 <td>2018</td>
 <td>Image</td>
@@ -49764,6 +49820,13 @@
 </tr>
 
 <tr>
+<td>Kill La Kill</td>
+<td>2015</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kill Me Slowly</td>
 <td>1993</td>
 <td>FantaCo</td>
@@ -52309,6 +52372,13 @@
 <td>2014</td>
 <td>Tidalwave</td>
 <td><a href="Tidalwave/Tidalwave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Les Miserables: The Fall Of Fantine</td>
+<td>2014</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55672,6 +55742,13 @@
 </tr>
 
 <tr>
+<td>Manga Classics</td>
+<td>2020</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Manga Darkchylde</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -57330,6 +57407,13 @@
 </tr>
 
 <tr>
+<td>Mega Man Mastermix</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mega Princess</td>
 <td>2016</td>
 <td>Boom!</td>
@@ -57522,6 +57606,13 @@
 <td>1998</td>
 <td>Awesome</td>
 <td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Menage A 3</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64390,6 +64481,13 @@
 </tr>
 
 <tr>
+<td>Otherworldly Izakaya Nobu</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Our Love</td>
 <td>1949</td>
 <td>Atlas</td>
@@ -65668,6 +65766,20 @@
 <td>2000</td>
 <td>Pantheon</td>
 <td><a href="Persepolis/Persepolis.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Persona3</td>
+<td>2016</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Persona4</td>
+<td>2016</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71119,6 +71231,13 @@
 </tr>
 
 <tr>
+<td>Rival Schools</td>
+<td>2006</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Riverdale</td>
 <td>2017</td>
 <td>Archie</td>
@@ -72078,6 +72197,13 @@
 </tr>
 
 <tr>
+<td>Rose Of Versailles</td>
+<td>2020</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rotten</td>
 <td>2009</td>
 <td>Moonstone</td>
@@ -73018,6 +73144,13 @@
 <td>1991</td>
 <td>Warner Books</td>
 <td><a href="WarnerBooks/WarnerBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sandra On The Rocks</td>
+<td>2019</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -78520,6 +78653,13 @@
 </tr>
 
 <tr>
+<td>Spyborgs</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>SpyBoy</td>
 <td>1999</td>
 <td>Dark Horse</td>
@@ -79374,6 +79514,13 @@
 </tr>
 
 <tr>
+<td>Steins Gate</td>
+<td>2015</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stellar</td>
 <td>2018</td>
 <td>Image</td>
@@ -79609,6 +79756,13 @@
 <td>2017</td>
 <td>Drawn And Quarterly</td>
 <td><a href="SticksAngelica/SticksAngelica.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sticky Dilly Buns</td>
+<td>2020</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80200,6 +80354,13 @@
 </tr>
 
 <tr>
+<td>Stravaganza: The Queen In The Iron Mask</td>
+<td>2019</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Straw Men</td>
 <td>1989</td>
 <td>Innovation</td>
@@ -80321,6 +80482,13 @@
 <tr>
 <td>Street Fighter</td>
 <td>2004</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter</td>
+<td>2004</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
 </tr>
@@ -80333,10 +80501,31 @@
 </tr>
 
 <tr>
+<td>Street Fighter II</td>
+<td>2005</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Street Fighter II Turbo</td>
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter IV</td>
+<td>2009</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Legends</td>
+<td>2006</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -80347,10 +80536,73 @@
 </tr>
 
 <tr>
-<td>Street Fighter vs G.I. Joe And Transformers</td>
+<td>Street Fighter Menat</td>
+<td>2019</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Reloaded</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Remix</td>
+<td>2008</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Super Combo Special</td>
+<td>2015</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Swimsuit Special</td>
+<td>2016</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Unlimited</td>
+<td>2015</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter V</td>
+<td>2016</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Vs Darkstalkers</td>
+<td>2017</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Vs G.I. Joe And Transformers</td>
 <td>2016</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Fighter Wrestlepalooza</td>
+<td>2019</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -81002,6 +81254,13 @@
 <td>2005</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Street Fighter</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -85605,6 +85864,13 @@
 <td>2011</td>
 <td>Arcana</td>
 <td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ultra Street Fighter II</td>
+<td>2018</td>
+<td>Udon</td>
+<td><a href="UdonComics/UdonComics.html">Details</a></td>
 </tr>
 
 <tr>
