--- a/index.html
+++ b/index.html
@@ -3174,6 +3174,13 @@
 </tr>
 
 <tr>
+<td>After Houdini</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>After Laughter</td>
 <td>2017</td>
 <td>Shortbox</td>
@@ -6293,6 +6300,13 @@
 </tr>
 
 <tr>
+<td>Ana Miralles</td>
+<td>1959</td>
+<td>Creator</td>
+<td><a href="AnaMiralles/AnaMiralles.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ana, Jungle Girl</td>
 <td>2000</td>
 <td>Avatar</td>
@@ -8978,6 +8992,13 @@
 </tr>
 
 <tr>
+<td>Atomic Frenchie</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Knights</td>
 <td>1950</td>
 <td>DC</td>
@@ -10256,6 +10277,13 @@
 <td>1989</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Baker Street Four</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11886,6 +11914,13 @@
 <td>2015</td>
 <td>Blank Slate</td>
 <td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Before Houdini</td>
+<td>2019</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15870,6 +15905,13 @@
 </tr>
 
 <tr>
+<td>Bowie: Stardust, Rayguns, and Moonage Daydreams</td>
+<td>2020</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Box Office Poison</td>
 <td>1996</td>
 <td>Antarctic Press</td>
@@ -17389,6 +17431,13 @@
 </tr>
 
 <tr>
+<td>Buyan: The Isle Of The Dead</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buz Sawyer</td>
 <td>1943</td>
 <td>King Features</td>
@@ -17617,6 +17666,13 @@
 <td>1989</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>California Comics</td>
+<td>1972</td>
+<td>Publisher</td>
+<td><a href="CaliforniaComics/CaliforniaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21236,6 +21292,13 @@
 </tr>
 
 <tr>
+<td>Clockwork Lives</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clone</td>
 <td>2012</td>
 <td>Image</td>
@@ -21792,6 +21855,13 @@
 <td>1983</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comet</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22882,6 +22952,20 @@
 <td>2003</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Court Of The Dead: Grave Tales: A Comics Omnibus</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Court Of The Dead: Shadows Of The Underworld</td>
+<td>2019</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26006,6 +26090,20 @@
 </tr>
 
 <tr>
+<td>DC Comics: Detective Comics: The Complete Covers</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>DC Comics: Wonder Woman: The Complete Covers</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>DC Thomson</td>
 <td>1903</td>
 <td>Publisher</td>
@@ -27909,6 +28007,13 @@
 </tr>
 
 <tr>
+<td>Die Hard: A Million Ways To Die Hard</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Die Hard: Year One</td>
 <td>2009</td>
 <td>Boom!</td>
@@ -28459,6 +28564,13 @@
 <td>2013</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Djinn</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31768,6 +31880,13 @@
 <td>1994</td>
 <td>Malibu</td>
 <td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elves</td>
+<td>2017</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41176,6 +41295,13 @@
 </tr>
 
 <tr>
+<td>Gypsy Omnibus</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gyro Force</td>
 <td>1987</td>
 <td>Rip Off</td>
@@ -41194,6 +41320,20 @@
 <td>2006</td>
 <td>Dark Horse</td>
 <td><a href="HGWWOTW/HGWWOTW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>H.G. Wells: The Invisible Man</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>H.G. Wells: The Island Of Dr. Moreau</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42041,6 +42181,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harmony</td>
+<td>2020</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45964,6 +46111,13 @@
 </tr>
 
 <tr>
+<td>Insight Editions</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Inspector</td>
 <td>1974</td>
 <td>Gold Key</td>
@@ -46143,6 +46297,13 @@
 <td>2008</td>
 <td>Marvel</td>
 <td><a href="InvincibleIronMan/InvincibleIronMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Invisible Empire</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54440,6 +54601,13 @@
 </tr>
 
 <tr>
+<td>M.F.K.</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>M.I.L.F. Magnet</td>
 <td>2009</td>
 <td>Moonstone</td>
@@ -55284,6 +55452,13 @@
 <td>1964</td>
 <td>Ediciones de la Flor</td>
 <td><a href="Mafalda/Mafalda.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mafia III</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56750,6 +56925,13 @@
 </tr>
 
 <tr>
+<td>Marvels</td>
+<td>1994</td>
+<td>Marvel</td>
+<td><a href="Marvels/Marvels.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Marvel's Greatest Comics</td>
 <td>1969</td>
 <td>Marvel</td>
@@ -56764,10 +56946,10 @@
 </tr>
 
 <tr>
-<td>Marvels</td>
-<td>1994</td>
-<td>Marvel</td>
-<td><a href="Marvels/Marvels.html">Details</a></td>
+<td>Marvel's Spider-Man: From Amazing To Spectacular</td>
+<td>2019</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56950,6 +57132,13 @@
 <td>2005</td>
 <td>Yale University Press</td>
 <td><a href="YaleUniversityPress/YaleUniversityPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Masters Of Comics</td>
+<td>2019</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57285,6 +57474,13 @@
 <td>1992</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mean Girls: Senior Year</td>
+<td>2020</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59573,6 +59769,13 @@
 <td>2019</td>
 <td>Vault</td>
 <td><a href="VaultComics/VaultComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monster Allergy</td>
+<td>2019</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73734,6 +73937,13 @@
 </tr>
 
 <tr>
+<td>Scoop</td>
+<td>2018</td>
+<td>Insight</td>
+<td><a href="InsightEditions/InsightEditions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scoop Comics</td>
 <td>1941</td>
 <td>Chesler
@@ -86270,6 +86480,13 @@
 <td>2009</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underground Price Guide</td>
+<td>1982</td>
+<td>Jay Kennedy</td>
+<td><a href="UndergroundPriceGuide/UndergroundPriceGuide.html">Details</a></td>
 </tr>
 
 <tr>
