--- a/index.html
+++ b/index.html
@@ -44144,6 +44144,13 @@
 </tr>
 
 <tr>
+<td>Hornrim Comix</td>
+<td>2020</td>
+<td>Nate Garcia</td>
+<td><a href="Hornrim/Hornrim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Horny Biker Slut</td>
 <td>1990</td>
 <td>Last Gasp</td>
