--- a/index.html
+++ b/index.html
@@ -53075,6 +53075,13 @@
 </tr>
 
 <tr>
+<td>Little Brown</td>
+<td>1837</td>
+<td>Publisher</td>
+<td><a href="LittleBrown/LittleBrown.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little Dot</td>
 <td>1953</td>
 <td>Harvey</td>
@@ -54766,6 +54773,13 @@
 <td>2015</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mad Peck Studios</a>
+<td>1968</td>
+<td>Publisher</td>
+<td><a href="MadPeckStudios/MadPeckStudios.html">Details</a></td>
 </tr>
 
 <tr>
